--- a/TGLParallaxCarousel/Classes/TGLParallaxCarousel.xib
+++ b/TGLParallaxCarousel/Classes/TGLParallaxCarousel.xib
@@ -28,7 +28,7 @@
                                 <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="o8V-Vm-3ev">
                                     <rect key="frame" x="166" y="-1" width="39" height="37"/>
                                     <color key="pageIndicatorTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="currentPageIndicatorTintColor" red="0.92549019607843142" green="0.69019607843137254" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="currentPageIndicatorTintColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                 </pageControl>
                             </subviews>
                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
